--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@import url("http://fonts.googleapis.com/css?family=Ubuntu+Condensed");
+@import url("https://fonts.googleapis.com/css?family=Ubuntu+Condensed");
 
 @import url("vendor.css");
 
