--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -820,7 +820,7 @@ canvas {
 ======================================*/
 .section-title {
   text-align: center;
-  font-family: Lobster, sans-serif;
+  font-family: Impact, sans-serif;
   font-size: 40px;
 }
 @media screen and (min-width: 480px) {
